2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__debugbreak): Add prototype before the inline as it
	appears in intrin.h.

2011-07-11  Ruben Van Boxem  <vanboxem.ruben@gmail.com>

	* float.h: Extend guards about Clang's __FLOAT_H.

2011-06-15  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sdks/_mingw_directx.h.in(__MINGW_HAS_DXSDK): Define.

2011-06-09  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__MINGW_POISON_NAME): Define.

2011-05-23  Ozkan Sezer  <sezeroz@gmail.com>

	* ctype.h (__mb_cur_max):  Define as __mb_cur_max for the _MSVCRT_
	special case.
	* stdlib.h: Remove the duplicated and typographically erroneous
	__mbcur_max macros. Make the entries identical to the ctype.h
	counterparts.
	(__mb_cur_max): Define as __mb_cur_max for the _MSVCRT_ special case.

2011-05-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdio.h (ftello64): Fix longstanding typo that caused define to be
	shadowed. Patch by Komisar (http://komisar.gin.by/).

2011-05-05  Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdlib.h (swab): Use define guards.
	* unistd.h (swab): Copy from stdlib.h as per POSIX spec.

2011-03-25  Kai Tietz  <ktietz70@googlemail.com>

	* string.h, memory.h: Add mempcpy prototype.
	* wchar.h: Add wmemcpy prototype.

2011-02-05  Kai Tietz  <kai.tietz@onevision.com>

	* _mingw_mac.h: Enable feature indicator macros for ISO-C printf/
	scanf functionality.
	* _mingw_print_push.h, _mingw_print_pop.h: Enable scanf.

2011-02-01  Kai Tietz  <kai.tietz@onevision.com>

	* stdlib.h (__mingw_wcsto(f|l|ld): Add prototypes.
	* wchar.h: Likewise.

2011-01-29  Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdio.h, wchar.h (__mingw_str_wide_utf8): Declare prototype.
	(__mingw_str_utf8_wide): Likewise.
	(__mingw_str_free): Likewise.

2011-01-24  Kai Tietz  <kai.tietz@onevision.com>

	* _mingw_print_pop.h, _mingw_print_push.h: Add wide-character API
	handling.
	* stdio.h, wchar.h: Add __mingw_-wprintf prototypes.
