@@ -1,5 +1,14 @@
 2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* winnt.h (C_ASSERT): Revert the EXTERN_C change from rev.4285/4286.
+	* usbioctl.h: Remove the extern "C" {} from the header completely.
+	There are no functions or variables are declared, only data types,
+	therefore it is not needed.
+	* dbghelp.h, psdk_inc/_dbg_common.h: move the extern "C" braces so
+	that the C_ASSERTs are not contained within them. (bug #3373905.)
+
+2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>
+
 	* winnt.h: Move the intrin.h include before the __faststorefence
 	inline. Remove the redundant prototype for _m_prefetchw() which
 	is already in intrin.h.
